Quorum/Library/Tests/Inheritance/Pass/B3.quorum
class B is A
    action Foo()
        output "B-Foo!"
    end
end