Quorum/Library/Tests/Inheritance/Fail/B.quorum
class B is A
    action Main
        
    end
end